# walk-these-ways-go2

./: test1010.py
go2_gym/: __init__.py
go2_gym/envs/base/: base_task.py  curriculum.py  legged_robot.py  legged_robot_config.py
go2_gym/envs/go2/: go2_config.py
go2_gym/envs/go2/velocity_tracking/: __init__.py
go2_gym_deploy/envs/: history_wrapper.py  lcm_agent.py
go2_gym_deploy/lcm_types/: leg_control_data_lcmt.lcm  pd_tau_targets_lcmt.lcm  rc_command_lcmt.lcm  state_estimator_lcmt.lcm
go2_gym_deploy/scripts/: deploy_policy.py
go2_gym_deploy/unitree_sdk2_bin/: lcm_position_go2.cpp
go2_gym_deploy/utils/: cheetah_state_estimator.py  command_profile.py  deployment_runner.py  logger.py
go2_gym_learn/ppo_cse/: __init__.py  actor_critic.py  ppo.py
scripts/: play.py  train.py
test/: CMakeLists.txt  go2_states.cpp
